# AdhaanLive

./: .gitignore  .pylintrc  README.md  adhaan_streamer.py  config.yml  environment.yml  main.py  pyproject.toml  requirements.txt  testing.py  util.py
api/: app.py
api/routes/: control.py  events.py  schedule.py  status.py
core/: __init__.py  detector.py  globals.py  playback.py  playback_controller.py  player.py  prayer_scheduler.py  runtime_state.py  scheduler.py  stream_refresher.py  streamer.py
frontend/: app.js  index.html  styles.css
tests/: sound_test.py  test_audio_reshape.py
utils/: __init__.py  adhaan_logger.py  audio_logger.py  config_loader.py  livestream.py  logger.py  prayer_api.py
