[project]
name = "adhaan-streamer"
version = "0.1.0"
description = "Plays mosque livestream automatically at Adhaan time"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "requests",
    "tabulate",
    "pyyaml",

    # Audio
    "sounddevice",
    "pyaudio",
    "soundfile",
    "ffmpeg-python",

    # Streaming / browser
    "selenium",
    "selenium-wire",
]
